data/derived/comb/progs/unify/prog2210.ml.out
Characters 279-367:
  | Thresh (ex1,ex2,ex3,ex4) -> "("^exprToString ex1^"<"^exprToString ex2^"?"^exprToString ex3^":"^ exprToString ex4^")";;
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
